--- a/apps/plane-mcp-server/overlays/prod/external-secrets-repo.yml
+++ b/apps/plane-mcp-server/overlays/prod/external-secrets-repo.yml
@@ -20,10 +20,12 @@ spec:
               "{{ .dockerserver }}": {
                 "username": "{{ .dockerusername }}",
                 "password": "{{ .dockerpassword }}",
-                "email": "{{ .dockeremail }}"
+                "email": "{{ .dockeremail }}",
+                "auth": "{{ printf "%s:%s" .dockerusername .dockerpassword | b64enc }}"
               }
             }
           }
+
   data:
     - secretKey: dockerusername
       remoteRef:
