--- a/apps/plane-mcp-server/overlays/prod/external-secrets-repo.yml
+++ b/apps/plane-mcp-server/overlays/prod/external-secrets-repo.yml
@@ -9,7 +9,7 @@ spec:
     name: mcp-servers-vault-backend
     kind: SecretStore
   target:
-    name: net-automation-k8s-repo-credentials  # Name of the Kubernetes Secret
+    name: net-automation-k8s-repo-credentials
     creationPolicy: Owner
     template:
       type: kubernetes.io/dockerconfigjson
@@ -17,7 +17,7 @@ spec:
         .dockerconfigjson: |
           {
             "auths": {
-              "{{ .dockerserver }}": {
+              "ghcr.io": {
                 "username": "{{ .dockerusername }}",
                 "password": "{{ .dockerpassword }}",
                 "email": "{{ .dockeremail }}",
@@ -25,7 +25,6 @@ spec:
               }
             }
           }
-
   data:
     - secretKey: dockerusername
       remoteRef:
@@ -39,7 +38,4 @@ spec:
       remoteRef:
         key: secret/my-github
         property: email
-    - secretKey: dockerserver
-      remoteRef:
-        key: secret/my-github
-        property: server
+
