Add GitHub Container Registry credentials to secrets

--- a/apps/plane-mcp-server/overlays/prod/external-secrets-repo.yml
+++ b/apps/plane-mcp-server/overlays/prod/external-secrets-repo.yml
@@ -22,9 +22,16 @@ spec:
                 "password": "{{ .dockerpassword }}",
                 "email": "{{ .dockeremail }}",
                 "auth": "{{ printf "%s:%s" .dockerusername .dockerpassword | b64enc }}"
+              },
+              "https://ghcr.io": {
+                "username": "{{ .dockerusername }}",
+                "password": "{{ .dockerpassword }}",
+                "email": "{{ .dockeremail }}",
+                "auth": "{{ printf "%s:%s" .dockerusername .dockerpassword | b64enc }}"
               }
             }
           }
+
   data:
     - secretKey: dockerusername
       remoteRef:
