--- a/apps/plane-mcp-server/overlays/prod/deployment.yml
+++ b/apps/plane-mcp-server/overlays/prod/deployment.yml
@@ -24,6 +24,12 @@ spec:
           env:
             - name: PLANE_BASE_URL
               value: "https://plane-pm.home.nerdylyonsden.io"
+            - name: PLANE_OAUTH_PROVIDER_CLIENT_ID
+              value: ""
+            - name: PLANE_OAUTH_PROVIDER_CLIENT_SECRET
+              value: ""
+            - name: PLANE_OAUTH_PROVIDER_BASE_URL
+              value: ""
             - name: PLANE_API_KEY
               valueFrom:
                 secretKeyRef:
