--- a/apps/plane-mcp-server/overlays/prod/deployment.yml
+++ b/apps/plane-mcp-server/overlays/prod/deployment.yml
@@ -25,11 +25,11 @@ spec:
             - name: PLANE_BASE_URL
               value: "https://plane-pm.home.nerdylyonsden.io"
             - name: PLANE_OAUTH_PROVIDER_CLIENT_ID
-              value: ""
+              value: "dummy"
             - name: PLANE_OAUTH_PROVIDER_CLIENT_SECRET
-              value: ""
+              value: "dummy"
             - name: PLANE_OAUTH_PROVIDER_BASE_URL
-              value: ""
+              value: "dummy"
             - name: PLANE_API_KEY
               valueFrom:
                 secretKeyRef:
