Disable mcp-allowed-origins in external-secrets-vault.yml
Comment out mcp-allowed-origins secret reference

--- a/apps/vault-mcp-server/overlays/prod/external-secrets-vault.yml
+++ b/apps/vault-mcp-server/overlays/prod/external-secrets-vault.yml
@@ -25,7 +25,7 @@ spec:
       remoteRef:
         key: secret/vault-mcp
         property: vault_namespace
-    - secretKey: mcp-allowed-origins
-      remoteRef:
-        key: secret/vault-mcp
-        property: mcp_allowed_origins
+    # - secretKey: mcp-allowed-origins
+    #   remoteRef:
+    #     key: secret/vault-mcp
+    #     property: mcp_allowed_origins
