Change MCP_CORS_MODE from 'strict' to 'development'

--- a/apps/vault-mcp-server/overlays/prod/deployment.yml
+++ b/apps/vault-mcp-server/overlays/prod/deployment.yml
@@ -43,7 +43,7 @@ spec:
             - name: MCP_ENDPOINT
               value: "/mcp"
             - name: MCP_CORS_MODE
-              value: "strict"
+              value: "development"
             - name: MCP_ALLOWED_ORIGINS
               value: ""
             - name: VAULT_ADDR
