Update secret key reference in external-secrets config

--- a/apps/wikijs-mcp-server/overlays/prod/external-secrets-wikijs-mcp.yml
+++ b/apps/wikijs-mcp-server/overlays/prod/external-secrets-wikijs-mcp.yml
@@ -15,5 +15,5 @@ spec:
   data:
     - secretKey: wikijs-token
       remoteRef:
-        key: secret/wikijs-mcp
+        key: secret/wikijs
         property: wikijs_token
