--- a/apps/metallb/overlays/prod/kustomization.yml
+++ b/apps/metallb/overlays/prod/kustomization.yml
@@ -1,3 +1,5 @@
 resources:
   - ip-address-pool.yml
   - l2-advertisement.yml
+  - ip-address-pool-pool-unbound.yml
+  - l2-advertisment-pihole-unbound.yml
