--- a/apps/metallb/overlays/prod/l2-advertisement-pihole-unbound.yml
+++ b/apps/metallb/overlays/prod/l2-advertisement-pihole-unbound.yml
@@ -3,7 +3,7 @@ apiVersion: metallb.io/v1beta1
 kind: L2Advertisement
 metadata:
   name: pihole-unbound-adv
-  namespace: metallb-system
+  namespace: metallb-prod
 spec:
   ipAddressPools:
     - pihole-unbound-pool
