--- a/apps/metallb/overlays/prod/ip-address-pool-pihole-unbound.yml
+++ b/apps/metallb/overlays/prod/ip-address-pool-pihole-unbound.yml
@@ -2,7 +2,7 @@ apiVersion: metallb.io/v1beta1
 kind: IPAddressPool
 metadata:
   name: pihole-unbound-pool
-  namespace: metallb-system
+  namespace: metallb-prod
 spec:
   addresses:
     - 192.168.104.18-192.168.104.18   # or a small range you reserve
