--- a/apps/nerdy-k8s-volume-manager/overlays/prod/cr-cluster-discovery.yml
+++ b/apps/nerdy-k8s-volume-manager/overlays/prod/cr-cluster-discovery.yml
@@ -1,20 +1,18 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  name: nkvm-cluster-discovery
+  name: nkvm-cluster-discovery-prod
   labels:
     app.kubernetes.io/name: nerdy-k8s-volume-manager
+    app.kubernetes.io/instance: nerdy-k8s-volume-manager-prod
     app.kubernetes.io/component: discovery
 rules:
-  # Cluster preflight namespace inventory.
   - apiGroups: [""]
     resources: ["namespaces"]
     verbs: ["list"]
-  # Cluster-wide read-only inventory for PVC and pod discovery.
   - apiGroups: [""]
     resources: ["persistentvolumeclaims", "pods"]
     verbs: ["list"]
-  # Read-only owner chain resolution for ReplicaSets and Jobs.
   - apiGroups: ["apps"]
     resources: ["replicasets"]
     verbs: ["get"]
