--- a/apps/nerdy-k8s-volume-manager/overlays/prod/crb.yml
+++ b/apps/nerdy-k8s-volume-manager/overlays/prod/crb.yml
@@ -1,15 +1,16 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: nkvm-cluster-discovery
+  name: nkvm-cluster-discovery-prod
   labels:
     app.kubernetes.io/name: nerdy-k8s-volume-manager
+    app.kubernetes.io/instance: nerdy-k8s-volume-manager-prod
     app.kubernetes.io/component: discovery
 subjects:
   - kind: ServiceAccount
     name: nkvm-runner
-    namespace: nerdy-k8s-volume-manager-dev
+    namespace: nerdy-k8s-volume-manager-prod
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-  name: nkvm-cluster-discovery
+  name: nkvm-cluster-discovery-prod
