--- a/apps/nerdy-k8s-volume-manager/overlays/prod/pvc.yml
+++ b/apps/nerdy-k8s-volume-manager/overlays/prod/pvc.yml
@@ -2,9 +2,10 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: nkvm-runtime-data
-  namespace: nerdy-k8s-volume-manager-dev
+  namespace: nerdy-k8s-volume-manager-prod
   labels:
     app.kubernetes.io/name: nerdy-k8s-volume-manager
+    app.kubernetes.io/instance: nerdy-k8s-volume-manager-prod
 spec:
   accessModes:
     - ReadWriteOnce
@@ -12,4 +13,4 @@ spec:
   resources:
     requests:
       storage: 20Gi
-  storageClassName: "rook-cephfs-d-delete"
+  storageClassName: rook-cephfs-retain
