--- a/apps/nerdy-k8s-volume-manager/overlays/prod/rb-vault-prod.yml
+++ b/apps/nerdy-k8s-volume-manager/overlays/prod/rb-vault-prod.yml
@@ -1,18 +1,17 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
-  # Replace with each allowlisted target namespace (for example: apps, data, platform).
-  namespace: netbox-dev
-  # Keep one binding per namespace to preserve least-privilege scope.
-  name: netbox-dev-nkvm-runtime
+  namespace: hashi-vault-prod
+  name: hashi-vault-prod-nkvm-runtime
   labels:
     app.kubernetes.io/name: nerdy-k8s-volume-manager
+    app.kubernetes.io/instance: nerdy-k8s-volume-manager-prod
     app.kubernetes.io/component: runtime
 subjects:
   - kind: ServiceAccount
     name: nkvm-runner
-    namespace: nerdy-k8s-volume-manager-dev
+    namespace: nerdy-k8s-volume-manager-prod
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-  name: nkvm-runtime
+  name: nkvm-runtime-prod
