--- a/apps/nerdy-k8s-volume-manager/overlays/prod/sa.yml
+++ b/apps/nerdy-k8s-volume-manager/overlays/prod/sa.yml
@@ -2,7 +2,8 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: nkvm-runner
-  namespace: nerdy-k8s-volume-manager-dev
+  namespace: nerdy-k8s-volume-manager-prod
   labels:
     app.kubernetes.io/name: nerdy-k8s-volume-manager
+    app.kubernetes.io/instance: nerdy-k8s-volume-manager-prod
     app.kubernetes.io/component: control-plane
